<resources>
    <string name="app_name">Lista de compras</string>
    <string name="nome_produto">Nome do produto</string>
    <string name="inserir">Inserir</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="real">R$ 0.00</string>
    <string name="soma_total">TOTAL: 0,00</string>
    <string name="adicionar_itens">Adicionar Itens</string>


</resources>
