<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16sp"
        tools:context=".ui.CadastroActivity">

    <TextView android:text="@string/cadastrar_produto"
              android:textSize="21sp"
              android:layout_marginBottom="15dp"
              android:textStyle="bold"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

    <ImageView android:src="@android:drawable/ic_menu_camera"
               android:id="@+id/img_foto_produto"
               android:layout_gravity="center_horizontal"
               android:layout_width="100dp"
               android:layout_height="100dp"/>

    <EditText android:id="@+id/txt_produto"
              android:hint="@string/nome_produto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <EditText android:id="@+id/txt_qtd"
              android:inputType="number"
              android:hint="@string/quantidade"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <EditText android:id="@+id/txt_valor"
              android:inputType="numberDecimal"
              android:hint="@string/real"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <Button android:id="@+id/btn_inserir"
            android:hint="@string/inserir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>